// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTree should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 16px 16px 16px 0px;
}

.c1 .c2 {
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 24px;
  min-width: 24px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2 c3"
            data-key="1"
          />
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 16px 16px 16px 0px;
}

.c1 .c2 {
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 24px;
  min-width: 24px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2 c3"
          data-key="1"
        />
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render component with expanded lists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 16px 16px 16px 0px;
}

.c1 .c2 {
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 24px;
  min-width: 24px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2 c3"
            data-key="1"
          />
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 16px 16px 16px 0px;
}

.c1 .c2 {
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 24px;
  min-width: 24px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2 c3"
          data-key="1"
        />
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render small components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 10px 16px 10px 0px;
}

.c1 .c2 {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 20px;
  min-width: 20px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2 c3"
            data-key="1"
          />
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="1"
              id="1"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4 c5 c6"
          >
            <input
              class="c7"
              data-key="2"
              id="2"
              type="checkbox"
            />
            <div
              class="c8 c9"
            >
              <div
                aria-hidden="true"
                class="c10"
                focusable="false"
              />
            </div>
          </div>
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class=""
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c10 {
  pointer-events: none;
}

.c10 *[fill^='#'] {
  fill: #FFFFFF;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c4 {
  width: 16px;
}

fieldset[data-dimension='s'] .c4 {
  height: 16px;
}

.c9 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  -webkit-transition: background 0.1s ease-in;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #626F84;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: calc(100% + 2px);
  height: calc(100% + 2px);
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 5px;
  margin: 0;
  padding: 0;
}

.c7::-ms-check {
  display: none;
}

.c7:disabled {
  pointer-events: none;
}

.c7:checked + .c8 {
  background-color: #0D69F2;
  border: none;
}

.c7:not(:checked) + .c8 > * {
  display: none;
}

.c7:not(:checked):focus + .c8,
.c7:not(:disabled):not(:checked):hover + .c8 {
  background-color: #F1F2F4;
  border: 1px solid #0A54C2;
}

.c7:checked:focus + .c8,
.c7:not(:disabled):checked:hover + .c8 {
  background-color: #0A54C2;
  border: none;
}

.c7:not(:checked):disabled + .c8 {
  background-color: #FFFFFF;
  border: 1px solid #C4CAD4;
}

.c7:disabled + .c8 {
  background-color: #C4CAD4;
  border: none;
}

.c7:focus-visible {
  outline-offset: 2px;
  outline: #0A54C2 solid 2px;
}

.c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  cursor: pointer;
}

.c3 path {
  fill: #626F84;
}

.c3:hover path {
  fill: #0A54C2;
}

.c1 {
  color: #2B313B;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #2B313B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 10px 16px 10px 0px;
}

.c1 .c2 {
  width: 20px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c6 {
  margin-right: 16px;
  height: 20px;
  min-width: 20px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2 c3"
          data-key="1"
        />
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="1"
            id="1"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4 c5 c6"
        >
          <input
            class="c7"
            data-key="2"
            id="2"
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <div
              aria-hidden="true"
              class="c10"
              focusable="false"
            />
          </div>
        </div>
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class=""
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
